clean up tests and gitattributes

--- a/tests/test_calibration.ipynb
+++ b/tests/test_calibration.ipynb
@@ -15,8 +15,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-03T21:21:48.876709Z",
-     "start_time": "2018-08-03T21:21:48.645657Z"
+     "end_time": "2018-08-16T20:08:43.288679Z",
+     "start_time": "2018-08-16T20:08:43.144680Z"
     }
    },
    "outputs": [],
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-03T21:23:28.819075Z",
-     "start_time": "2018-08-03T21:23:28.775781Z"
+     "end_time": "2018-08-16T20:09:13.177281Z",
+     "start_time": "2018-08-16T20:09:13.133776Z"
     }
    },
    "outputs": [],
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-03T21:25:52.555547Z",
-     "start_time": "2018-08-03T21:23:29.307785Z"
+     "end_time": "2018-08-16T20:11:30.130761Z",
+     "start_time": "2018-08-16T20:09:14.576820Z"
     }
    },
    "outputs": [],
@@ -147,21 +147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:stable]",
+   "display_name": "Python [conda env:py36]",
    "language": "python",
-   "name": "conda-env-stable-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "name": "conda-env-py36-py"
   },
   "toc": {
    "base_numbering": 1,
