--- a/tests/test_opus_api.ipynb
+++ b/tests/test_opus_api.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-10T19:58:06.827467Z",
-     "start_time": "2018-08-10T19:58:06.716722Z"
+     "end_time": "2018-08-16T22:40:58.027884Z",
+     "start_time": "2018-08-16T22:40:57.987907Z"
     }
    },
    "outputs": [],
    "source": [
-    "from pyciss import opusapi\n",
+    "from pyciss import opusapi, io\n",
     "# from pytest import tmpdir\n",
     "\n",
     "opus = opusapi.OPUS()"
@@ -29,17 +29,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-10T19:58:07.425125Z",
-     "start_time": "2018-08-10T19:58:07.396479Z"
+     "end_time": "2018-08-16T22:37:46.630072Z",
+     "start_time": "2018-08-16T22:37:46.557747Z"
     }
    },
    "outputs": [],
    "source": [
-    "img_id = 'N1875229393_1'\n",
+    "img_id = 'N1875229393'\n",
     "# img_id = 'N1695760475'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-16T22:51:32.112266Z",
+     "start_time": "2018-08-16T22:51:31.813379Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyciss.downloader import download_and_calibrate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-16T22:55:10.961705Z",
+     "start_time": "2018-08-16T22:52:42.166596Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "download_and_calibrate(img_id)"
    ]
   },
   {
@@ -47,8 +75,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-10T19:58:08.495914Z",
-     "start_time": "2018-08-10T19:58:08.269129Z"
+     "end_time": "2018-08-16T22:37:53.312487Z",
+     "start_time": "2018-08-16T22:37:53.017942Z"
     }
    },
    "outputs": [
@@ -62,16 +90,16 @@
     {
      "data": {
       "text/plain": [
-       "[Raw:\n",
-       " Label:\n",
-       " https://pds-rings.seti.org/holdings/volumes/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1.LBL\n",
-       " Image:\n",
-       " https://pds-rings.seti.org/holdings/volumes/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1.IMG\n",
-       " Calibrated:\n",
-       " Label:\n",
-       " https://pds-rings.seti.org/holdings/calibrated/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1_CALIB.LBL\n",
-       " Image:\n",
-       " https://pds-rings.seti.org/holdings/calibrated/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1_CALIB.IMG]"
+       "Raw:\n",
+       "Label:\n",
+       "https://pds-rings.seti.org/holdings/volumes/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1.LBL\n",
+       "Image:\n",
+       "https://pds-rings.seti.org/holdings/volumes/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1.IMG\n",
+       "Calibrated:\n",
+       "Label:\n",
+       "https://pds-rings.seti.org/holdings/calibrated/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1_CALIB.LBL\n",
+       "Image:\n",
+       "https://pds-rings.seti.org/holdings/calibrated/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1_CALIB.IMG"
       ]
      },
      "execution_count": 14,
@@ -80,7 +108,164 @@
     }
    ],
    "source": [
-    "opus.query_image_id(img_id)"
+    "opus.query_image_id(img_id)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-16T22:39:58.688515Z",
+     "start_time": "2018-08-16T22:38:03.615802Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading N1875229393_1.IMG\n",
+      "Downloading N1875229393_1.LBL\n",
+      "Downloading N1875229393_1_CALIB.IMG\n",
+      "Downloading N1875229393_1_CALIB.LBL\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/Volumes/USB128II/ciss/db/N1875229393'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opus.download_results(calib=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-16T22:41:08.186176Z",
+     "start_time": "2018-08-16T22:41:08.122578Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cal_cub: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.cal.cub\n",
+       "calib_img: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1_CALIB.IMG\n",
+       "calib_label: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1_CALIB.LBL\n",
+       "cubepath: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.cal.dst.map.cub\n",
+       "dst_cub: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.cal.dst.cub\n",
+       "raw_cub: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.cub\n",
+       "raw_image: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.IMG\n",
+       "raw_label: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.LBL\n",
+       "tif: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.cal.dst.map.tif\n",
+       "undestriped: /Volumes/USB128II/ciss/db/N1875229393/N1875229393_1.cal.map.cub"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "io.PathManager(img_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-14T16:17:29.577820Z",
+     "start_time": "2018-08-14T16:17:29.536554Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://pds-rings.seti.org/holdings/browse/COISS_2xxx/COISS_2113/data/1875228144_1875491141/N1875229393_1_small.jpg'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opus.obsids[0].small_img_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://tools.pds-rings.seti.org/opus/#/target=S+Rings&instrument=Cassini+ISS&COISScamera=Narrow+Angle&RINGGEOprojectedradialresolution1=&RINGGEOprojectedradialresolution2=1&RINGGEOringradius1=75000&RINGGEOringradius2=92000&view=search&browse=gallery&colls_browse=gallery&page=1&gallery_data_viewer=true&limit=100&order=time1&cols=opusid,instrumentid,planet,target,time1,observationduration&widgets=RINGGEOringradius1,RINGGEOprojectedradialresolution1,COISScamera,instrument,planet,target&widgets2=&detail="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-14T16:00:41.645594Z",
+     "start_time": "2018-08-14T16:00:41.222077Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "url = 'https://tools.pds-rings.seti.org/opus/#/target=S+Rings&instrument=Cassini+ISS&COISScamera=Narrow+Angle&RINGGEOprojectedradialresolution1=&RINGGEOprojectedradialresolution2=1&RINGGEOringradius1=75000&RINGGEOringradius2=92000&view=search&browse=gallery&colls_browse=gallery&page=1&gallery_data_viewer=true&limit=100&order=time1&cols=opusid,instrumentid,planet,target,time1,observationduration&widgets=RINGGEOringradius1,RINGGEOprojectedradialresolution1,COISScamera,instrument,planet,target&widgets2=&detail='"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-14T16:00:49.627697Z",
+     "start_time": "2018-08-14T16:00:49.578378Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://tools.pds-rings.seti.org/opus/#/target=S+Rings',\n",
+       " 'instrument=Cassini+ISS',\n",
+       " 'COISScamera=Narrow+Angle',\n",
+       " 'RINGGEOprojectedradialresolution1=',\n",
+       " 'RINGGEOprojectedradialresolution2=1',\n",
+       " 'RINGGEOringradius1=75000',\n",
+       " 'RINGGEOringradius2=92000',\n",
+       " 'view=search',\n",
+       " 'browse=gallery',\n",
+       " 'colls_browse=gallery',\n",
+       " 'page=1',\n",
+       " 'gallery_data_viewer=true',\n",
+       " 'limit=100',\n",
+       " 'order=time1',\n",
+       " 'cols=opusid,instrumentid,planet,target,time1,observationduration',\n",
+       " 'widgets=RINGGEOringradius1,RINGGEOprojectedradialresolution1,COISScamera,instrument,planet,target',\n",
+       " 'widgets2=',\n",
+       " 'detail=']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url.split('&')"
    ]
   },
   {
