--- a/tests/test_utils.ipynb
+++ b/tests/test_utils.ipynb
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -58,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -89,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -115,14 +109,19 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def test_which_epi_janus_resonance():\n",
+    "    assert u.which_epi_janus_resonance('Janus', '2005-01-01') == \"Janus2\"\n",
+    "    assert u.which_epi_janus_resonance('Epimetheus', '2007-01-01') == \"Epimetheus1\"\n",
+    "    assert u.which_epi_janus_resonance('Janus', '2011-01-01') == \"Janus2\"\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:stable]",
+   "display_name": "Python [conda env:py36]",
    "language": "python",
-   "name": "conda-env-stable-py"
+   "name": "conda-env-py36-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -134,26 +133,52 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.6"
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "12px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": false,
    "sideBar": false,
-   "threshold": 4,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
+   "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
