--- a/tests/test_index.ipynb
+++ b/tests/test_index.ipynb
@@ -2,40 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/klay6683/miniconda3/envs/py37/lib/python3.7/site-packages/tqdm/autonotebook/__init__.py:14: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  \" (e.g. in jupyter console)\", TqdmExperimentalWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyciss import index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/klay6683/Dropbox/data/ciss/db')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "index.get_index_dir()"
+    "p = index.get_index_dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cumindex = index.read_cumulative_iss_index()"
    ]
   },
   {
@@ -49,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,27 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/klay6683/Dropbox/data/ciss/db/COISS_2999_index.lbl')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lblpath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,51 +74,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converting times for column EARTH_RECEIVED_START_TIME.\n",
-      "Converting times for column EARTH_RECEIVED_STOP_TIME.\n",
-      "Converting times for column IMAGE_MID_TIME.\n",
-      "Converting times for column IMAGE_TIME.\n",
-      "Converting times for column PRODUCT_CREATION_TIME.\n",
-      "Converting times for column START_TIME.\n",
-      "Converting times for column STOP_TIME.\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = label.read_index_data(convert_times=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/klay6683/Dropbox/data/ciss/db/COISS_2999_index.lbl')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lblpath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,20 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CALIBRATION_LAMP_STATE_FLAG\n",
-      "DESCRIPTION\n",
-      "METHOD_DESC\n",
-      "TARGET_LIST\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in df.columns:\n",
     "    weird = (df[[col]].applymap(type) != df[[col]].iloc[0].apply(type)).any(axis=1)\n",
@@ -172,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,21 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 403115 entries, 0 to 403114\n",
-      "Columns: 140 entries, FILE_NAME to STANDARD_DATA_PRODUCT_ID\n",
-      "dtypes: datetime64[ns](7), float64(70), int64(20), object(43)\n",
-      "memory usage: 430.6+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.info()"
    ]
